Move BaseLayout related files to src/layouts.BaseLayout/

--- a/src/pages/deviceList/index.astro
+++ b/src/pages/deviceList/index.astro
@@ -1,6 +1,6 @@
 ---
 import ListItem from "../../components/ListItem.astro";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 import { DeviceTypeEnum } from "../../scripts/parse";
 
 const deviceTypes: DeviceTypeEnum[] = [
