--- a/src/pages/use_case/index.astro
+++ b/src/pages/use_case/index.astro
@@ -1,7 +1,7 @@
 ---
 import "/src/styles/home.css";
 import "./index.css";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 ---
 
 <BaseLayout>
