--- a/src/layouts/BaseLayout/BaseLayout.astro
+++ b/src/layouts/BaseLayout/BaseLayout.astro
@@ -75,7 +75,7 @@ const {
     <script type="text/javascript" src="https://unpkg.com/@popperjs/core@2"
     ></script>
     <script type="text/javascript" src="https://unpkg.com/tippy.js@6"></script>
-    <script type="text/javascript" src="/scripts/main.js"></script>
+    <script src="./_main.js"></script>
     <!-- ${ self.javascript() } -->
 
     <!-- freight sans pro font -->
@@ -284,7 +284,7 @@ const {
       </footer>
 
       <div id="fb-root"></div>
-      <script is:inline src="/scripts/baseLayout.js"></script>
+      <script src="./_baseLayout.js"></script>
     </div>
   </body>
 </html>
