--- a/src/pages/developerTools/index.astro
+++ b/src/pages/developerTools/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 import DeveloperToolCard from "./DeveloperToolCard.astro";
 import "./index.css";
 ---
