--- a/src/pages/download/index.astro
+++ b/src/pages/download/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 import ErrorPage from "../../components/ErrorPage.astro";
 import "./index.css";
 ---
