--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import "/src/styles/home.css";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../layouts/BaseLayout/BaseLayout.astro";
 import { Image } from "@astrojs/image/components";
 
 import { DEVICE_MANAGER } from "../scripts/deviceManager";
