--- a/src/pages/model/[model].astro
+++ b/src/pages/model/[model].astro
@@ -4,7 +4,7 @@ import { dirname, join } from "path";
 import { fileURLToPath } from "url";
 import ErrorPage from "../../components/ErrorPage.astro";
 import RequestDeviceCard from "../../components/RequestDeviceCard/RequestDeviceCard.astro";
-import DeviceBaseLayout from "../../layouts/BaseLayout.astro";
+import DeviceBaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 import { DEVICE_MANAGER } from "../../scripts/deviceManager";
 import deviceJson from "../../scripts/device_info.json";
 import type { ModelValue } from "../../scripts/model";
