--- a/src/pages/type/[type].astro
+++ b/src/pages/type/[type].astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
 import RequestDeviceCard from "../../components/RequestDeviceCard/RequestDeviceCard.astro";
 
 import "./index.css";
