Update pages title

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -22,7 +22,7 @@ import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
           screenshots in keynote for their client projects. MockUPhone right now
           supports iPhone mockup, iPad mockup, Android mockup and TV mockup.
         </p>
-        <h3>About the creator</h3>
+        <h3>About the Creator</h3>
         <p>
           MockUPhone.com is developed by
           <a
