--- a/src/pages/attribution/index.astro
+++ b/src/pages/attribution/index.astro
@@ -9,7 +9,7 @@ import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
     content="MockUPhone's vector mockups are coming from different iOS psd and Android psd providers. Special Thanks to the designers and developers."
   />
   <div class="static-page static-text-page">
-    <h1 class="title">Attributor</h1>
+    <h1 class="title">Attribution</h1>
     <div class="content row-fluid">
       <div class="span10">
         <p>
