--- a/src/pages/deviceList/index.astro
+++ b/src/pages/deviceList/index.astro
@@ -19,7 +19,7 @@ const deviceTypes: DeviceTypeEnum[] = [
     content="MockUPhone supports devices including iPhone mockup, iPad mockup, Android mockup and TV mockup. You can check out the whole device list via this page."
   />
   <div class="static-page device-list-page">
-    <h1 class="title">Device list</h1>
+    <h1 class="title">Device List</h1>
     <div class="content">
       {deviceTypes.map((deviceType) => <ListItem type={deviceType} />)}
     </div>
