--- a/src/pages/use_case/index.astro
+++ b/src/pages/use_case/index.astro
@@ -14,7 +14,7 @@ import BaseLayout from "../../layouts/BaseLayout/BaseLayout.astro";
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="title">Use case</h1>
+          <h1 class="title">Use Case</h1>
           <p>
             MockUPhone helps you to wrap your app screenshots in your favorite
             iOS/Android/Win Phone devices with multiple colors and orientations.
