Fix device page bugs

--- a/src/pages/type/[type].astro
+++ b/src/pages/type/[type].astro
@@ -46,7 +46,7 @@ const brandList: Array<BrandEnum | "all"> = ["all", ...nonEmptyBrands];
     name="description"
     content="MockUPhone supports devices including iPhone mockup, iPad mockup, Android mockup and TV mockup. You can check out the whole device list via this page."
   />
-  <script type="text/javascript" src="./_device.js"></script>
+  <script src="./_device.js"></script>
   <script
     define:vars={{ thumbnailList, brandThumbnailList, modelItems, brandItems }}
   >
