--- a/src/pages/model/[model].astro
+++ b/src/pages/model/[model].astro
@@ -151,8 +151,8 @@ if (deviceDetail.imagePath != null && deviceDetail.imagePath.length >= 1) {
   <script type="text/javascript" src="/scripts/vendor/psd.min.js"></script>
   <script type="text/javascript" src="/scripts/utils/images.js"></script>
   <script type="text/javascript" src="/scripts/utils/scroll.js"></script>
-  <script type="text/javascript" src="/scripts/models/image-upload.js"></script>
-  <script src="./upload.js"></script>
+  <script src="./models/_image-upload.js"></script>
+  <script src="./_upload.js"></script>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"
   ></script>
   <div class="mockup-content">
