--- a/src/components/DeviceSearch/search.css
+++ b/src/components/DeviceSearch/search.css
@@ -130,10 +130,47 @@
     height: 100%;
   }
 
-  /* .aa-InputWrapperPrefix > .aa-DetachedCancelButton {
-    height: 100%;
-  } */
   .aa-InputWrapperSuffix {
     width: 48px;
   }
+}
+
+/* header variant styles */
+
+#device-list__header__autocomplete {
+  max-width: 38%; /* 543 / 1440 */
+  flex: 1 1 0%;
+  margin: 0;
+  height: 56px;
+  background: var(--white);
+}
+
+@media (width >= 992px) {
+  #device-list__header__autocomplete {
+    margin: 0 0 0 144px; /* to prevent search bar overlapping with mockuphone logo */
+  }
+}
+
+@media (width >= 1300px) {
+  #device-list__header__autocomplete {
+    margin: 0;
+  }
+}
+
+.search-device {
+  display: flex;
+  padding: 40px 20px 0;
+}
+
+@media (width >= 992px) {
+  .search-device {
+    display: none;
+  }
+}
+
+#device-list__page__autocomplete {
+  flex: 1 1 0%;
+  margin: 0;
+  height: 56px;
+  background: var(--white);
 }
