--- a/src/layouts/BaseLayout/BaseLayout.astro
+++ b/src/layouts/BaseLayout/BaseLayout.astro
@@ -2,8 +2,8 @@
 import "bootstrap/dist/css/bootstrap.min.css";
 import "bootstrap/dist/css/bootstrap-grid.min.css";
 import "bootstrap/dist/css/bootstrap.min.css";
-import "/src/styles/main.css";
-import "/src/styles/tailwind.css";
+import "./main.css";
+import "./tailwind.css";
 import { Image } from "@astrojs/image/components";
 import DeviceSearch from "../../components/DeviceSearch/DeviceSearch.astro";
 
