--- a/src/pages/model/[model].astro
+++ b/src/pages/model/[model].astro
@@ -9,7 +9,7 @@ import { DEVICE_MANAGER } from "../../scripts/deviceManager";
 import deviceJson from "../../scripts/device_info.json";
 import type { ModelValue } from "../../scripts/model";
 import { ModelEnum } from "../../scripts/parse";
-import "/src/styles/upload.css";
+import "./upload.css";
 import * as Matrix from "../../scripts/utils/matrix";
 import * as Rect from "../../scripts/utils/rect";
 import * as Quad from "../../scripts/utils/quad";
